<resources>
    <string name="app_name" translatable="false">Triunity</string>
    <string name="login">Log In</string>
    <string name="log_txt">Login</string>
    <string name="login_logo">login_logo</string>
    <string name="l_email">Email</string>
    <string name="l_pass">Password</string>
    <string name="u_register">Don\'t have an account? Register </string>
    <string name="s_register">Are you seller? Register as seller </string>
    <string name="hint_password">Password</string>
    <string name="h_email">Email</string>

</resources>